# gatekeeper

./: CHANGELOG.md  Cargo.toml  README.md  gatekeeper.service  release.toml
.github/workflows/: post-release.yaml
entity/src/: auto_role.rs  auto_role_group.rs  lib.rs  member.rs  mod.rs  prelude.rs  xp_channel.rs  xp_role.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/commands/: admin.rs  auto_role.rs  auto_role_group.rs  character.rs  economy.rs  mod.rs  xp.rs  xp_channel.rs  xp_role.rs
src/utils/: db.rs  embed.rs  mod.rs  num.rs  perms.rs  xp.rs
